--- a/sass/modules/testimonial/_testimonial-slider-area-two.scss
+++ b/sass/modules/testimonial/_testimonial-slider-area-two.scss
@@ -61,7 +61,7 @@
                     margin-right: 42px !important;
                   }
                   @include sm{
-                    margin: 0 12px 80px 12px;
+                    margin: 0 ;
                   }
                   &.slick-active{
                     @include xl{
