--- a/sass/pages/_service-page.scss
+++ b/sass/pages/_service-page.scss
@@ -17,7 +17,7 @@
         .section-title{
             margin-bottom: 96px;
             @include sm{
-                margin-bottom: 48px;
+                margin-bottom: 32px;
             }
             @include md{
                 margin-bottom: 48px;
